// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio checked set to false 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    checked={false}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio checked set to true 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    checked={true}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio default 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio should accept disabled 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c3 input:checked + .c1 {
  color: #6C43E0;
}

.c3 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c3 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input:disabled + .c1 {
  color: #939BA5;
}

.c3 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c3 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  cursor: not-allowed;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    disabled={true}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with aria-describedby 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

.c3 input:checked + .c1 {
  color: #6C43E0;
}

.c3 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c3 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input:disabled + .c1 {
  color: #939BA5;
}

.c3 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c3 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    aria-describedby="some-id"
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with name and id 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  border-color: currentColor;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 {
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  border-color: #DEE1E5;
  background: #FFFFFF;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: transparent;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: transparent;
}

<div
  className="c0"
>
  <input
    id="Chuck"
    name="Chuck"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;
